--- a/src/main/resources/com/matteotocci/app/AggiungiPasto.fxml
+++ b/src/main/resources/com/matteotocci/app/AggiungiPasto.fxml
@@ -131,9 +131,9 @@
                         </HBox>
 
                         <!-- ScrollPane con contenuto della dieta -->
-                        <ScrollPane fitToWidth="true" hbarPolicy="NEVER" prefHeight="540.0" prefWidth="320.0" vbarPolicy="AS_NEEDED">
+                        <ScrollPane fx:id="scrollPane" fitToWidth="true" hbarPolicy="NEVER" prefHeight="540.0" prefWidth="320.0" vbarPolicy="AS_NEEDED" VBox.vgrow="ALWAYS">
                      <content>
-                        <VBox fx:id="contenitoreRicetteDieta" alignment="TOP_CENTER" spacing="8.0" visible="false">
+                        <VBox fx:id="vboxContenuto" alignment="TOP_CENTER" fillWidth="true" prefHeight="540.0" spacing="8.0" >
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </padding>
