--- a/src/main/resources/com/matteotocci/app/DatiCliente.fxml
+++ b/src/main/resources/com/matteotocci/app/DatiCliente.fxml
@@ -15,13 +15,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="551.0" prefWidth="531.0" style="-fx-background-color: green;" stylesheets="@css/stile_login.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DatiCliente">
+<AnchorPane prefHeight="551.0" prefWidth="531.0"  stylesheets="@css/PrimaPagina-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.DatiCliente">
     <children>
-        <BorderPane layoutX="51.0" prefHeight="551.0" prefWidth="478.0" style="-fx-background-color: white;">
-            <styleClass>
-                <String fx:value="pagina-tonda" />
-                <String fx:value="border-color" />
-            </styleClass>
+        <BorderPane layoutX="51.0" prefHeight="551.0" prefWidth="478.0" >
             <top>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <children>
@@ -29,7 +25,7 @@
                             <children>
                                 <ImageView fitHeight="224.0" fitWidth="277.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
-                                        <Image url="@immagini/logo.jpg" />
+                                        <Image url="@immagini/logo.png" />
                                     </image>
                                     <VBox.margin>
                                         <Insets bottom="10.0" />
