--- a/src/main/resources/com/matteotocci/app/ConfermaRegistrazione.fxml
+++ b/src/main/resources/com/matteotocci/app/ConfermaRegistrazione.fxml
@@ -1,46 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="354.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.RegistrazioneConferma">
+<AnchorPane prefHeight="400.0" prefWidth="354.0" styleClass="root" stylesheets="@css/ConfermaPagina-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.RegistrazioneConferma">
     <children>
-        <BorderPane prefHeight="400.0" prefWidth="354.0">
-
-            <!-- Colonna verde a sinistra -->
-            <left>
-                <Pane prefWidth="30.0" style="-fx-background-color: #0d8505;" BorderPane.alignment="CENTER" />
-            </left>
-
-            <!-- Contenuto principale -->
-            <right>
-                <AnchorPane prefHeight="400.0" prefWidth="321.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-                    <children>
-                        <ImageView fitHeight="224.0" fitWidth="277.0" layoutX="34.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@immagini/logo.jpg" />
-                            </image>
-                        </ImageView>
-                        <Text layoutX="44.0" layoutY="281.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registrazione avvenuta con successo!" wrappingWidth="232.41754150390625">
-                            <font>
-                                <Font size="14.0" />
-                            </font>
-                        </Text>
-                        <Button layoutX="100.0" layoutY="322.0" mnemonicParsing="false" onAction="#tornaAlLogin" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: linear-gradient(#35a500, #006400); -fx-text-fill: white; -fx-background-radius: 10;" text="Torna al login">
-                            <cursor>
-                                <Cursor fx:constant="HAND" />
-                            </cursor>
-                        </Button>
-                    </children>
-                </AnchorPane>
-            </right>
-        </BorderPane>
+      <BorderPane layoutX="61.0" layoutY="10.0" prefHeight="600.0" prefWidth="478.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="0.0">
+         <styleClass>
+            <String fx:value="pagina-tonda" />
+            <String fx:value="border-color" />
+            <String fx:value="container-shadow" />
+         </styleClass>
+         <center>
+            <AnchorPane prefHeight="600.0" prefWidth="478.0">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                              <ImageView fitHeight="224.0" fitWidth="277.0" pickOnBounds="true" preserveRatio="true" styleClass="logo-image">
+                                  <image>
+                                      <Image url="@immagini/logo.png" />
+                                  </image>
+                           <VBox.margin>
+                              <Insets bottom="30.0" />
+                           </VBox.margin>
+                              </ImageView>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="testo-conferma" text="Registrazione avvenuta con successo!" wrappingWidth="232.41754150390625">
+                                  <font>
+                                      <Font size="14.0" />
+                                  </font>
+                           <VBox.margin>
+                              <Insets bottom="30.0" />
+                           </VBox.margin>
+                              </Text>
+                              <Button mnemonicParsing="false" onAction="#tornaAlLogin" prefHeight="44.0" prefWidth="154.0" styleClass="bottone-login" text="Torna al login">
+                                  <cursor>
+                                      <Cursor fx:constant="HAND" />
+                                  </cursor>
+                              </Button>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
+         </center>
+      </BorderPane>
     </children>
 </AnchorPane>
