--- a/src/main/resources/com/matteotocci/app/PastiGiornalieri.fxml
+++ b/src/main/resources/com/matteotocci/app/PastiGiornalieri.fxml
@@ -7,19 +7,18 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.geometry.Insets?>
-<VBox styleClass="main-container" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.PastiGiornalieri">
+<VBox styleClass="main-container" stylesheets="@css/PastiGiornalieri-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.PastiGiornalieri">
     <children>
         <!-- Header con titolo e controlli data -->
         <BorderPane>
             <center>
                 <HBox alignment="CENTER" spacing="20.0" styleClass="header-section">
                     <children>
-                        <Button fx:id="btnPrecedente" mnemonicParsing="false" onAction="#onPrecedenteClick" prefHeight="35.0" prefWidth="120.0" styleClass="nav-button" text="← Precedente" />
+                        <Button fx:id="btnPrecedente" mnemonicParsing="false" onAction="#onPrecedenteClick" prefHeight="35.0" prefWidth="135.0" styleClass="nav-button" text="← Precedente" />
 
                         <VBox alignment="CENTER" spacing="5.0" styleClass="date-container">
                             <children>
@@ -28,20 +27,10 @@
                             </children>
                         </VBox>
 
-                        <Button fx:id="btnSuccessivo" mnemonicParsing="false" onAction="#onSuccessivoClick" prefHeight="35.0" prefWidth="120.0" styleClass="nav-button" text="Successivo →" />
+                        <Button fx:id="btnSuccessivo" mnemonicParsing="false" onAction="#onSuccessivoClick" prefHeight="35.0" prefWidth="135.0" styleClass="nav-button" text="Successivo →" />
                     </children>
                 </HBox>
             </center>
-            <right>
-                <Button fx:id="btnClose" mnemonicParsing="false" onAction="#handleCloseButtonAction" styleClass="close-button" text="✖" BorderPane.alignment="TOP_RIGHT">
-                    <padding>
-                        <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-                    </padding>
-                    <BorderPane.margin>
-                        <Insets right="10.0" top="10.0" />
-                    </BorderPane.margin>
-                </Button>
-            </right>
         </BorderPane>
 
         <!-- Riepilogo nutrizionale giornaliero -->
@@ -99,6 +88,9 @@
                                     <TableColumn fx:id="colColazioneGrassi" prefWidth="80.0" text="Grassi" />
                                     <TableColumn fx:id="colColazioneAzioni" prefWidth="120.0" text="Azioni" />
                                 </columns>
+                        <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                             </TableView>
                         </children>
                     </VBox>
@@ -123,6 +115,9 @@
                                     <TableColumn fx:id="colSpuntinoGrassi" prefWidth="80.0" text="Grassi" />
                                     <TableColumn fx:id="colSpuntinoAzioni" prefWidth="120.0" text="Azioni" />
                                 </columns>
+                        <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                             </TableView>
                         </children>
                     </VBox>
@@ -147,6 +142,9 @@
                                     <TableColumn fx:id="colPranzoGrassi" prefWidth="80.0" text="Grassi" />
                                     <TableColumn fx:id="colPranzoAzioni" prefWidth="120.0" text="Azioni" />
                                 </columns>
+                        <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                             </TableView>
                         </children>
                     </VBox>
@@ -171,6 +169,9 @@
                                     <TableColumn fx:id="colMerendaGrassi" prefWidth="80.0" text="Grassi" />
                                     <TableColumn fx:id="colMerendaAzioni" prefWidth="120.0" text="Azioni" />
                                 </columns>
+                        <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                             </TableView>
                         </children>
                     </VBox>
@@ -195,6 +196,9 @@
                                     <TableColumn fx:id="colCenaGrassi" prefWidth="80.0" text="Grassi" />
                                     <TableColumn fx:id="colCenaAzioni" prefWidth="120.0" text="Azioni" />
                                 </columns>
+                        <columnResizePolicy>
+                           <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
                             </TableView>
                         </children>
                     </VBox>
